--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: beige;
+    background-color: #f2f2f2;
+    font-size: 18px;
 }
 .welcome{
     max-width:100% ;
@@ -81,4 +82,5 @@ h2{
 .footer{
     text-align: center;
 }
+
 
