--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #f2f2f2;
+    background-color: rgb(125, 125, 121);
     font-size: 18px;
 }
 .welcome{
@@ -82,5 +82,6 @@ h2{
 .footer{
     text-align: center;
 }
+
 
 
